force-app/main/default/objects/Bird_Returns_Program_Period__c.object
<CustomObject>
    <description>Represents the calendar periods that Bird Returns bids are associated with.</description>
    <fields>
        <fullName>Competitive_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the bids entered in this program period are competitive or non-competitive.</inlineHelpText>
        <label>Competitive Bid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Definition_of_Compliance__c</fullName>
        <description>Pulls down to Site Compliance Visits for this Program Period so Field Tech can view current definition. Now that we&apos;re not using Salesforce1 for compliance monitoring, this field is no longer necessary. Deprecating.</description>
        <inlineHelpText>Pulls down to Site Compliance Visits for this Program Period so Field Tech can view current definition.</inlineHelpText>
        <label>XDeprecated: Definition of Compliance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The last day of this program period</description>
        <inlineHelpText>The last day of this program period</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minimum_Flooded_for_Compliance__c</fullName>
        <description>The minimum % of field area that needs to be flooded to qualify as &quot;in compliance&quot; for rice fields in this program period.</description>
        <inlineHelpText>The minimum % of field area that needs to be flooded to qualify as &quot;in compliance&quot; for rice fields in this program period.</inlineHelpText>
        <label>XDeprecated: Minimum % Flooded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_Stakes_in_Compliance__c</fullName>
        <description>The minimum % of stakes that needs to be in compliance at a visit for rice fields in this program period. (Compliance criteria are in other fields.)</description>
        <inlineHelpText>The minimum % of stakes that needs to be in compliance at a visit for rice fields in this program period. (Compliance criteria are in other fields.)</inlineHelpText>
        <label>XDeprecated: Minimum % of Stakes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Stake_Compliance_Level_Max__c</fullName>
        <defaultValue>99</defaultValue>
        <description>The maximum water level (in inches) that constitutes compliance for the program period</description>
        <inlineHelpText>The maximum water level (in inches) that constitutes compliance for the program period</inlineHelpText>
        <label>Stake Compliance Level Max</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stake_Compliance_Level_Min__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Defines the minimum water level that constitutes &quot;in compliance&quot; condition for stakes in this program period.</description>
        <inlineHelpText>Defines the minimum water level (in inches) that constitutes the &quot;in compliance&quot; condition for stakes in this program period.</inlineHelpText>
        <label>Stake Compliance Level Min</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stake_Compliance_Min_or_Max__c</fullName>
        <description>Defines the compliance condition for individual stakes in this program period; they need to be either below a maximum or above a minimum water level. Water level is defined in another field.</description>
        <inlineHelpText>Defines the compliance condition for individual stakes in this program period; they need to be either below a maximum or above a minimum water level. Water level is defined in another field.</inlineHelpText>
        <label>XDeprecated: Stake Compliance Min or Max</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The first day of this program period</description>
        <inlineHelpText>The first day of this program period</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Program Period</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bird Returns Program Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>